--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@mipmap/icon"
+        android:label="RobotAndroid"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.mustafathamer.RobotAndroid.RobotAndroidGame"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:label="RobotGame"
+            android:label="RobotAndroid"
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
