--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.mustafathamer.RobotAndroid"
+          package="com.mustafathamer.GalaxyRun"
           android:versionCode="1"
           android:versionName="1.0">
 
@@ -14,13 +14,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon"
-        android:label="RobotAndroid"
+        android:label="GalaxyRun"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.mustafathamer.RobotAndroid.RobotAndroidGame"
+            android:name="com.mustafathamer.GalaxyRun.GalaxyRunGame"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:label="RobotAndroid"
+            android:label="GalaxyRun"
             android:screenOrientation="userPortrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
